--- a/package.json
+++ b/package.json
@@ -20,7 +20,17 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+		"@esbuild-plugins/node-modules-polyfill": "^0.1.4",
+		"@esri/arcgis-to-geojson-utils": "^1.3.0",
 		"@fontsource/fira-mono": "^4.5.0",
-		"cookie": "^0.4.1"
+		"assert": "^2.0.0",
+		"browserify-zlib": "^0.2.0",
+		"buffer": "^6.0.3",
+		"cookie": "^0.4.1",
+		"process": "^0.11.10",
+		"stream-browserify": "^3.0.0",
+		"util": "^0.12.4",
+		"wkx": "^0.5.0"
 	}
 }
